basic styles video embed and social links

--- a/index.html
+++ b/index.html
@@ -14,27 +14,33 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
-  <!--[if lte IE 9]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
+<h1>Whodunnit League</h1>
+<p>A place to watch your favorite humans lie, laugh, and lounge in the world's most serious social deducation league.</p>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+    <iframe
+      src="https://player.twitch.tv/?channel=whodunnitshow&muted=true"
+      height="450"
+      width="800"
+      frameborder="0"
+      scrolling="no"
+      allowfullscreen="true">
+  </iframe>
+
+<ul class="flex-container social-media-list">
+  <li><a href="https://twitter.com/whodunnitleague">Twitter</a></li>
+  <li><a href="https://www.instagram.com/whodunnitleague/">Instagram</a></li>
+</ul>
+
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
