WDLWeb2 - display basic information

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 <body>
 <h1>Whodunnit League</h1>
 <p>A place to watch your favorite humans lie, laugh, and lounge in the world's most serious social deducation league.</p>
-
     <iframe
       src="https://player.twitch.tv/?channel=whodunnitshow&muted=true"
       height="450"
@@ -29,7 +28,7 @@
       scrolling="no"
       allowfullscreen="true">
   </iframe>
-
+<p>Get more of your new faves on the socials:</p>
 <ul class="flex-container social-media-list">
   <li><a href="https://twitter.com/whodunnitleague">Twitter</a></li>
   <li><a href="https://www.instagram.com/whodunnitleague/">Instagram</a></li>
