--- a/fantasy/team.html
+++ b/fantasy/team.html
@@ -10,11 +10,26 @@
     <div>
       <div>
         <h1>Create Your WDL Fantasy Team</h1>
-        <form ng-submit="createUser(email, displayName)">
-          <p>Email: <input type="email" ng-model="email" required></input></p>
-          <p>Display Name:
-            <input type="text" ng-model="displayName" required></input>
-          </p>
+        <form
+          ng-submit="newUser.$valid && createUser(email, displayName);
+                     newUser.$setPristine()" 
+          name="newUser">
+            <p>Email:
+              <input type="email" name="email" ng-model="email" check="checkEmail(value)" required unique-value></input>
+              <span ng-show="newUser.email.$dirty && newUser.email.$invalid">
+                  Invalid email or email already in use.
+              </span>
+            </p>
+            <p>Display Name:
+              <input
+                type="text" name="displayName" ng-model="displayName"
+                check="checkDisplayName(value)" required unique-value>
+              </input>
+              <span
+                ng-show="newUser.displayName.$dirty && newUser.displayName.$invalid">
+                  Display name invalid or already in use.
+              </span>
+            </p>
           <input type="submit" value="Submit"></input>
         </form>
       </div>
@@ -33,8 +48,8 @@
    app.controller('fantasyCtrl', function($scope, $http) {
      $scope.createUser = function(email, displayName) {
        var data = {
-         email: $scope.email,
-         display_name: $scope.displayName
+         email: email,
+         display_name: displayName
        }
        $http.post(apiBaseUrl + '/users/', data).then(function (response) {
          console.log(response.data);
@@ -44,9 +59,55 @@
      };
 
      $scope.accessTeam = function(userId) {
-       console.log('doin the other thing');
+       var data = {
+         id: $scope.userId
+       }
+       $http({
+         url: apiBaseUrl + '/users',
+         method: 'GET',
+         params: data
+       }).then(function(response) {
+          console.log(response.data);
+        });
        $scope.userId = '';
      };
+
+     function checkUser(data) {
+       return $http({
+         url: apiBaseUrl + '/users/check',
+         method: 'GET',
+         params: data
+       });
+     }
+
+     $scope.checkEmail = function(email) {
+       var data = {email: email};
+       return checkUser(data);
+     }
+
+     $scope.checkDisplayName = function(displayName) {
+       var data = {display_name: displayName};
+       return checkUser(data);
+     }
+  });
+  app.directive('uniqueValue', function($http, $q) {
+    return {
+      require: 'ngModel',
+      scope: {
+        check: '&'
+      },
+      link: function(scope, element, attr, ngModel) {
+        ngModel.$asyncValidators.exist = function(modelValue, viewValue) {
+          return scope.check({value: viewValue}).then(function(response) {
+            console.log(response.data);
+            if (response.data.exists) {
+              return $q.reject();
+            }
+            return true;
+          });
+        }
+      }
+    };
   });
   </script>
 </body>
