Add link to home page for fantasy teams
Resolves Ticket: WDLWeb7

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>
 <h1>Whodunnit League</h1>
 <p>A place to watch your favorite humans lie, laugh, and lounge in the world's most serious social deducation league.</p>
+<p>Create or Access your Whodunnit League <a href="./fantasy/team-create.html">Fantasy Team</a></p>
     <iframe
       src="https://player.twitch.tv/?channel=whodunnitshow&muted=true"
       height="450"
