--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h1>Whodunnit League</h1>
 <p>A place to watch your favorite humans lie, laugh, and lounge in the world's most serious social deducation league.</p>
     <iframe
-      src="https://player.twitch.tv/?channel=whodunnitshow&muted=true"
+      src="https://player.twitch.tv/?channel=whodunnitchannel&muted=true"
       height="450"
       width="800"
       frameborder="0"
