--- a/fantasy/team.html
+++ b/fantasy/team.html
@@ -41,12 +41,12 @@
       <h1> Welcome, {{displayName}}!</h1>
       <p>Your User Id is: {{userId}}</p>
       <p>Your link is: {{location}}</p>
-      <p>You email is: {{email}}</p>
+      <p>Your email is: {{email}}</p>
     </div>
     <div ng-show="noSuchUser">
       <h3>The user id: <h3>
       <p>{{userId}}</p>
-      <h3>does not correspond to any existing users.</h3>        
+      <h3>does not correspond to any existing users.</h3>
   </div>
 </body>
 </html>
