--- a/fantasy/team.html
+++ b/fantasy/team.html
@@ -34,6 +34,11 @@
       $scope.getTeam();
     });
     </script>
+
+
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/home.css">
 </head>
 <body>
   <div ng-app="teamApp" ng-controller="teamCtrl">
