Add message that team picks are coming soon
Resolves Ticket: WDLWeb7

--- a/fantasy/team.html
+++ b/fantasy/team.html
@@ -47,6 +47,7 @@
       <p>Your User Id is: {{userId}}</p>
       <p>Your link is: {{location}}</p>
       <p>Your email is: {{email}}</p>
+      <h2>Team picks to come!  Hold on to your ID</h2>
     </div>
     <div ng-show="noSuchUser">
       <h3>The user id: <h3>
