Include favicon on fantasy team pages

--- a/fantasy/team-create.html
+++ b/fantasy/team-create.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/home.css">
+    <link rel="icon" href="../favicon.png" type="image/x-icon">
 </head>
 <body>
   <div ng-app="teamCreateApp" ng-controller="teamCreateCtrl">
