--- a/fantasy/team.html
+++ b/fantasy/team.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/home.css">
+    <link rel="icon" href="../favicon.png" type="image/x-icon">
 </head>
 <body>
   <div ng-app="teamApp" ng-controller="teamCtrl">
