added background and font changes

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/home.css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Roboto|Roboto+Condensed" rel="stylesheet">
 </head>
 
 <body>
